# my-awesome-project

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  ball.c  ball.h  bullet.c  bullet.h  buttons.c  buttons.h  coin.c  coin.h  game.c  game.h  global.c  global.h  main.c  menu.c  menu.h  player.c  player.h  scores.c  scores.h  scores.txt  settings.c  settings.h  ship.c  ship.h  textures.c  textures.h
